2012-04-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc):  A bug in the new wedge/nowedge option left a
	gap in the perimeter of some circles.
	Bug #3522503

2012-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Prevent illegal characters from being generated as 
	subplot ids if there are more than 30 subplots in a multiplot.

2012-04-26  Jon Oddie  <joddie@users.sourceforge.net>

	* docs/doc2texi.c: Two bug fixes
	Cleaner code to determine which term files to read in d2t-get-terminals.
	Fix code for uniquifying duplicate node names.

	* configure.in docs/Makefile.in docs/doc2texi.c:
	Create an Emacs Lisp file of documentation strings extracted from the
	syntax descriptions in gnuplot.doc. Gnuplot-mode can then optionally
	display these strings as automatic one-line documentation while editing,
	and pop up the full syntax description on request

2012-04-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Write out coordinates to the precision implied by
	SVG_SCALE.

	* src/set.c: Fix incorrect test for error return from iconv().

2012-04-24  Mojca Miklavec <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.trm:  Clip images to bounding box. Reset line type
	at the start of each plot.

2012-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in m4/apple.m4:  Add a configuration option for aquaterm.
	The default is --without-aquaterm, select using --with-aquaterm.

2012-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm: rgba colors

2012-04-18  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/canvasmath.js (measure): Correct width of composite characters

	* term/svg.trm: The svg code refers to CANVAS_OVERSAMPLE when it should
	refer to SVG_SCALE.  Fortunately they both equal 10.

2012-04-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (load_file):  If the input file did not end in a newline,