@@ -4,6 +4,8 @@
 	gap in the perimeter of some circles.
 	Bug #3522503
 
+	* term/wxt.trm:  Add a linewidth option to the wxt terminal.
+
 2012-04-27  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/svg.trm:  Prevent illegal characters from being generated as 
